Build cleanups